# XunYou

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
novels/: 《斗罗大陆》作者：唐家三少.novel  龙族 作者：江南.novel
src/: App.vue  main.ts  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  config.rs  lib.rs  main.rs  novel.rs  tool.rs  types.rs
src-tauri/src/config/: app.rs  mod.rs  novel.rs  style.rs
src/api/: fs.ts  novel.ts
src/common/: Scrollbar.vue
src/components/: MainPanel.vue  Statusbar.vue  Titlebar.vue
src/components/Center/: ShowInfo.vue  View.vue
src/components/LeftSidebar/: Bookmark.vue  Catalogue.vue  HistoryPanel.vue  Toolbox.vue
src/components/MainPanel/: CenterPanel.vue  LeftToolPanel.vue  RightToolPanel.vue
src/components/MainPanel/CenterPanel/: Jump.vue  ShowInfo.vue  View.vue
src/components/MainPanel/LeftToolPanel/: Bookmark.vue  Catalogue.vue  HistoryPanel.vue  Tag.vue  Toolbar.vue  Toolbox.vue
src/components/MainPanel/RightToolPanel/: SearchPanel.vue  Setting.vue  Toolbar.vue
src/components/RightSidebar/: SearchPanel.vue  Setting.vue
src/components/Titlebar/: Icon.vue  MMC.vue
src/router/: index.ts
src/store/: cursor.ts  novel.ts  show.ts  style.ts
src/views/: CenterView.vue  LeftSidebarView.vue  RightSidbarView.vue
