[package]
name = "xunyou"
version = "2.2.2"
description = "xunyou"
authors = ["ys928"]
license = "MIT"
repository = "https://github.com/ys928/XunYou"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
bzip2 = "0.5.1"
dirs = "6.0.0"
regex = "1.10.4"
log = "0.4.26"
log4rs = "1.3.0"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-window-state = "2.2.1"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!! 
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-window-state = "2.0.0-rc"
